<resources>
    <string name="app_name">313 ChatAS</string>
    <string name="loading">Loading ...</string>
    <string name="fullname_or_nickname">... use your Name or Nickname</string>
    <string name="your_password">... your password</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign IN</string>
    <string name="chat">CHAT</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="tap_for_change_your_pass">Tap for change your password</string>
    <string name="change_your_pass">Change your password</string>
</resources>
