<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photoView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_logo"
        app:civ_border_color="@color/colorBGend"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/full_name_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_text_view"
        android:gravity="center"
        android:hint="@string/fullname_or_nickname"
        android:paddingBottom="6dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorBGend"
        android:textColorHint="@color/colorHintSignIn"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoView" />

    <EditText
        android:id="@+id/pass_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_text_view"
        android:gravity="center"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:paddingBottom="6dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorBGend"
        android:textColorHint="@color/colorHintSignIn"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name_EditText" />

    <TextView
        android:id="@+id/sign_in_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_text_view"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorBGend"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_EditText" />

    <TextView
        android:id="@+id/textBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/don_t_have_account"
        android:textColor="@color/colorPrimary"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_TextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/sign_up_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textBottom"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_TextView"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>